# formbd-debugger

./: ECOSYSTEM.scm  META.scm  README.adoc  SPEC.adoc  STATE.scm
adapters/: Cargo.toml
adapters/cli/: Cargo.toml
adapters/cli/src/: main.rs
adapters/formdb/: Cargo.toml
adapters/formdb/src/: journal.rs  lib.rs  provenance.rs  snapshot.rs
adapters/postgres/: Cargo.toml
adapters/postgres/src/: lib.rs  schema.rs  transaction.rs
adapters/sqlite/: Cargo.toml
adapters/sqlite/src/: lib.rs
core/: FormDBDebugger.lean  lake-manifest.json  lakefile.lean  lakefile.toml
core/FormBDDebugger/State/: Delta.lean
core/FormDBDebugger/Proofs/: FDPreserving.lean  Lossless.lean
core/FormDBDebugger/Types/: Query.lean
idris/: debugger.ipkg
idris/src/: Main.idr
idris/src/REPL/: Commands.idr  Core.idr
ui/: Cargo.toml
ui/src/: app.rs  main.rs
ui/src/widgets/: constraint_tree.rs
