# SPDX-License-Identifier: AGPL-3.0-or-later

[workspace]
resolver = "2"
members = [
    "postgres",
    "formdb",
    "sqlite",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/hyperpolymath/formdb-debugger"
keywords = ["database", "debugging", "verification", "formdb"]
categories = ["database", "development-tools::debugging"]

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
