# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "formdb-debugger-sqlite"
description = "SQLite adapter for FormDB Debugger (testing)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
